--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "url-parameters",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A package to help you easily manage url parameters with browser history support and listening for changes.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["url", "params", "history"],
+  "keywords": [
+    "url",
+    "params",
+    "history"
+  ],
   "author": "Mattias Persson <mattias@happypixels.se>",
   "license": "ISC",
   "dependencies": {
     "location-bar": "3.0.1"
   },
   "repository": {
-    "type" : "git", 
-    "url" : "https://github.com/mattias-persson/url-parameters.git"
+    "type": "git",
+    "url": "https://github.com/mattias-persson/url-parameters.git"
   }
 }
