--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "history"
   ],
   "author": "Mattias Persson <mattias@happypixels.se>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "location-bar": "3.0.1"
   },
